src/Styles/NavBar.css
#navBar {
    display: flex;
    width: 100%;
    justify-content: space-between;
    align-items: flex-end;
    border-bottom: 1px solid rgb(83, 83, 83);
    background-color: #d4d4d4;
    position: sticky;
    top: 0;
    left: 0;
    z-index: 10;
}

#movEvita {
    width: 8%;  
    padding: 1%;  
    margin-left: 10%;
}

@media only screen and (max-width: 1024px){
	/*Big smartphones [426px -> 600px]*/
    #movEvita {
        width: 12%;
    }
}

@media only screen and (max-width: 600px){
	/*Small smartphones [325px -> 425px]*/
    #movEvita {
        width: 25%;
        padding: 3%;
        margin-left: 3%;
    }
}


@media only screen and (max-width: 412px){  
}

@media only screen and (max-width: 320px){
	/*Small smartphones [325px -> 425px]*/

}


/* indice */

#indice {
    margin-right: 10%;
    display: flex;
}

#indice a {
    width: max-content;
}


.logo {
    max-width: 5rem;
}

.nav-list {
    list-style-type: none;
    display: flex;
    gap: 1rem;
}

.nav-list li a {
    text-decoration: none;
    color: #1c1c1c;
}

.abrir-menu,
.cerrar-menu {
    display: none;
}

@media screen and (max-width: 700px) {
    #navBar {
        align-items: center;
    }

    .abrir-menu,
    .cerrar-menu {
        display: block;
        border: 0;
        font-size: 1.25rem;
        cursor: pointer;
        width: min-content;
        height: min-content;
        background-color: transparent;
    }

    .nav {
        opacity: 0;
        visibility: hidden;
        display: flex;
        flex-direction: column;
        align-items: flex-end;
        gap: 1rem;
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        background-color: #1c1c1c;
        padding: 2rem;
        box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5);
    }

    .nav.visible {
        opacity: 1;
        visibility: visible;
        z-index: 99;
        padding-bottom: 100vh;  
    }
    
    .nav-list {
        flex-direction: column;
        align-items: flex-end;
    }

    .nav-list li a {
        color: #ecececec;
    }
}

